hphp/hack/test/typecheck/functional_anon_fun.php.legacy.exp
File "functional_anon_fun.php", line 24, characters 10-36:
Invalid return type (Typing[4110])
File "functional_anon_fun.php", line 19, characters 21-23:
This is an int
File "functional_anon_fun.php", line 14, characters 30-33:
It is incompatible with void
